Add loan information page (CR-02)
